--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/quantumicon.png" />
+    <link rel="icon" type="image/svg+xml" href="/quantapath.jpg" />
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quantum Facts</title>
+    <title>QuantaPath</title>
   </head>
   <body>
     <div id="root"></div>
