--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/quantapath.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/quantalogo.png" />
     <link
       href="https://api.mapbox.com/mapbox-gl-js/v1.10.1/mapbox-gl.css"
       rel="stylesheet"
